<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/links">

    <Button
        android:id="@+id/zur_hilfe_seite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="630dp"
        android:layout_marginEnd="250dp"
        android:background="@drawable/awesome_toast_hilfe_button"
        android:text="@string/Button_Hilfe"
        android:textColor="@color/text" />

    <Button
        android:id="@+id/weite_wird_berechnet"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/kommentar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="135dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="135dp"
        android:background="@drawable/awesome_toast_hilfe_button"
        android:enabled="false"
        android:alpha="0.5"
        android:text="@string/Button_weite_wird_berechnet"
        android:textColor="@color/text" />

    <Button
        android:id="@+id/hilfe_button_v"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/eingegebene_hoehe"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="320dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:alpha="0.85"
        android:background="@drawable/awesome_toast_hilfe_button"
        android:text="@string/Button_Hilfe_V"
        android:textColor="@color/text" />

    <Button
        android:id="@+id/hilfe_button_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="320dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="20dp"
        android:alpha="0.85"
        android:background="@drawable/awesome_toast_hilfe_button"
        android:text="@string/Button_Hilfe_H"
        android:textColor="@color/text"/>

    <EditText
        android:id="@+id/eingegebene_hoehe"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="100dp"
        android:autofillHints="0"
        android:digits="0123456789"
        android:ems="10"
        android:hint="@string/EditText_hohe_eingeben"
        android:inputType="numberDecimal"
        android:textAlignment="textStart"
        android:textColorHint="@color/text"
        android:textColor="@color/text"/>

    <EditText
        android:id="@+id/eingegebene_beschleunigung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/eingegebene_hoehe"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:autofillHints="0"
        android:digits="0123456789"
        android:ems="10"
        android:hint="@string/EdiText_eingegebene_Beschleunigung"
        android:inputType="numberDecimal"
        android:textAlignment="textStart"
        android:textColorHint="@color/text"
        android:textColor="@color/text"/>

    <TextView
        android:id="@+id/willkommensSeite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/willkomensText"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textColorHint="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/zurTabelle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="250dp"
        android:layout_marginTop="630dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/awesome_toast_hilfe_button"
        android:text="@string/Button_Zu_der_Tabelle"
        android:textColor="@color/text"/>

    <EditText
        android:id="@+id/kommentar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/eingegebene_beschleunigung"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="Kein Kommentar"
        android:ems="10"
        android:hint="@string/kommentar"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        android:textColorHint="@color/text"
        android:textColor="@color/text"/>

</RelativeLayout>