<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rechts"
    tools:context=".Activity3_Hilfe">

    <TextView
        android:id="@+id/ueberschrift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/Button_Hilfe"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/zur_Startseite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="630dp"
        android:layout_marginEnd="250dp"
        android:background="@drawable/awesome_toast_hilfe_button"
        android:text="@string/Button_Zurück_zu_Start"
        android:textColor="@color/text"/>

    <Button
        android:id="@+id/zur_Tabelle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="250dp"
        android:layout_marginTop="630dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/awesome_toast_hilfe_button"
        android:text="@string/Button_Zu_der_Tabelle"
        android:textColor="@color/text"/>

    <TextView
        android:id="@+id/hilfeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/awesome_text_field"
        android:freezesText="false"
        android:text="@string/hilfe_seite_text"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/text_ueberschrift" />

</RelativeLayout>